# crystallography

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  test.py
bragg/crystal/: atom.py  crystal.py
bragg/databases/: database.py  implement_spglib.py  implement_txt.py
bragg/plotting/: supercell_plotter.py  supercell_plotter_mpl.py
bragg/symmetry/: __init__.py  crystall_space_group.py  group.py  magnetic_symmetry.py
bragg/utils/: arrays.py
crystallography/: __init__.py
crystallography/crystal/: atom.py  crystal.py  lattice.py
crystallography/databases/: __init__.py
crystallography/plotting/: __init__.py  crystal_plotter_mixin.py
crystallography/symmetry/: __init__.py  crystall_space_group.py  group.py  magnetic.py  magnetic_symmetry.py  spatial.py
tests/: noxfile.py  test_crystal.py  test_linalg.py  test_utils_arrays.py
tests/databases/: test_txt_databases.py
tests/symmetry/: __init__.py  test_group.py  test_magnetic.py  test_magnetic_symmetry.py  test_spatial.py  test_symmetrization.py
